--- a/style.css
+++ b/style.css
@@ -1,32 +1,34 @@
 body {
   background-color: black;
   font-family: "Muli", sans-serif;
+  color: darkgrey;
 }
 
 #opening {
   color: darkgrey;
-  font-size: 12rem !important;
+  margin-top: 220px;
 }
 
 .text {
   color: darkgrey;
   font-size: 1.5rem;
   font-variant: small-caps;
+  margin-bottom: 10px;
 }
 
-@media screen and (min-width: 1050px) {
-  .row-cols-md-2 {
-  }
-}
-
-.homeFooter {
+#footer {
+  border-top: 1px solid darkgrey;
   padding-top: 36px;
-  display: flex;
-  align-items: center;
+  flex-direction: column;
   text-align: center;
-  padding-bottom: calc(env(safe-area-inset-bottom, 20px) + 36px);
+  padding-bottom: calc(env(safe-area-inset-bottom, 20px) + 20px);
+  width: 100%;
 }
 
 canvas {
   border-bottom: 1px solid darkgrey;
+}
+
+img {
+  height: 300px;
 }
