--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body {
   margin-bottom: 10px;
 }
 
+a {
+  color: darkgrey;
+  font-size: 1.5rem;
+}
+
 #footer {
   border-top: 1px solid darkgrey;
   padding-top: 36px;
@@ -29,6 +34,18 @@ canvas {
   border-bottom: 1px solid darkgrey;
 }
 
-img {
-  height: 300px;
+.row img {
+  width: 300px;
+}
+
+.top {
+  width: 100%;
+}
+
+.top h4 {
+  float: right;
+}
+
+.row {
+  margin-top: 30px;
 }
