--- a/style.css
+++ b/style.css
@@ -23,29 +23,38 @@ a {
 
 #footer {
   border-top: 1px solid darkgrey;
-  padding-top: 36px;
+  padding-top: 25px;
   flex-direction: column;
   text-align: center;
   padding-bottom: calc(env(safe-area-inset-bottom, 20px) + 20px);
   width: 100%;
 }
 
-canvas {
-  border-bottom: 1px solid darkgrey;
-}
-
 .row img {
   width: 300px;
-}
-
-.top {
-  width: 100%;
-}
-
-.top h4 {
-  float: right;
+  border: darkgrey soild 2px;
 }
 
 .row {
-  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.navbar {
+  display: flex;
+  justify-content: flex-end;
+}
+
+#rowTitle {
+  margin-bottom: 10px;
+}
+
+#myPic {
+  width: 250px;
+}
+
+.card {
+  height: 600px;
+  width: 300px;
+  display: flex;
+  justify-content: center;
 }
