--- a/style.css
+++ b/style.css
@@ -32,7 +32,12 @@ a {
 
 .row img {
   width: 300px;
-  border: darkgrey soild 2px;
+  border: darkgrey solid 15px;
+}
+
+.row img:hover {
+  width: 300px;
+  border: white solid 20px;
 }
 
 .row {
